@@ -1,5 +1,7 @@
 package io.unitycatalog.server.utils;
 
+import static io.unitycatalog.server.security.SecurityContext.Issuers.INTERNAL;
+
 import com.auth0.jwk.Jwk;
 import com.auth0.jwk.JwkProvider;
 import com.auth0.jwk.JwkProviderBuilder;
@@ -13,62 +15,74 @@ import io.unitycatalog.server.exception.ErrorCode;
 import io.unitycatalog.server.exception.OAuthInvalidClientException;
 import io.unitycatalog.server.exception.OAuthInvalidRequestException;
 import io.unitycatalog.server.security.SecurityContext;
-import lombok.SneakyThrows;
-
-import java.net.URL;
+import java.net.URI;
 import java.nio.file.Path;
+import java.security.interfaces.ECPublicKey;
 import java.security.interfaces.RSAPublicKey;
 import java.util.Map;
-
-import static io.unitycatalog.server.security.SecurityContext.Issuers.INTERNAL;
+import lombok.SneakyThrows;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public class JwksOperations {
 
   private final WebClient webClient = WebClient.builder().build();
   private static final ObjectMapper mapper = new ObjectMapper();
+  private final SecurityContext securityContext;
 
-  public JwksOperations() {
+  private static final Logger LOGGER = LoggerFactory.getLogger(JwksOperations.class);
+
+  public JwksOperations(SecurityContext securityContext) {
+    this.securityContext = securityContext;
   }
 
   @SneakyThrows
-  public JWTVerifier verifierForIssuerAndKey(String issuer, String keyId) {
+  public JWTVerifier verifierForIssuerAndKey(String issuer, String keyId, String alg) {
     JwkProvider jwkProvider = loadJwkProvider(issuer);
     Jwk jwk = jwkProvider.get(keyId);
 
-    if (!"RSA".equalsIgnoreCase(jwk.getPublicKey().getAlgorithm())) {
-      throw new OAuthInvalidRequestException(ErrorCode.ABORTED,
-              String.format("Invalid algorithm '%s' for issuer '%s'",
-                      jwk.getPublicKey().getAlgorithm(), issuer));
-    }
-
-    Algorithm algorithm = algorithmForJwk(jwk);
+    Algorithm algorithm = algorithmForJwk(jwk, alg);
 
     return JWT.require(algorithm).withIssuer(issuer).build();
   }
 
   @SneakyThrows
-  private Algorithm algorithmForJwk(Jwk jwk) {
-    return switch (jwk.getAlgorithm()) {
-      case "RS256" -> Algorithm.RSA256((RSAPublicKey) jwk.getPublicKey(), null);
-      case "RS384" -> Algorithm.RSA384((RSAPublicKey) jwk.getPublicKey(), null);
-      case "RS512" -> Algorithm.RSA512((RSAPublicKey) jwk.getPublicKey(), null);
+  private Algorithm algorithmForJwk(Jwk jwk, String alg) {
+    String keyType = jwk.getType();
+
+    return switch (keyType) {
+      case "RSA" -> switch (alg) {
+        case "RS256" -> Algorithm.RSA256((RSAPublicKey) jwk.getPublicKey(), null);
+        case "RS384" -> Algorithm.RSA384((RSAPublicKey) jwk.getPublicKey(), null);
+        case "RS512" -> Algorithm.RSA512((RSAPublicKey) jwk.getPublicKey(), null);
+        default -> throw new OAuthInvalidClientException(ErrorCode.ABORTED,
+                String.format("Unsupported RSA algorithm: %s", alg));
+      };
+      case "EC" -> switch (alg) {
+        case "ES256" -> Algorithm.ECDSA256((ECPublicKey) jwk.getPublicKey(), null);
+        case "ES384" -> Algorithm.ECDSA384((ECPublicKey) jwk.getPublicKey(), null);
+        case "ES512" -> Algorithm.ECDSA512((ECPublicKey) jwk.getPublicKey(), null);
+        default -> throw new OAuthInvalidClientException(ErrorCode.ABORTED,
+                String.format("Unsupported ECDSA algorithm: %s", alg));
+      };
       default -> throw new OAuthInvalidClientException(ErrorCode.ABORTED,
-              String.format("Unsupported algorithm: %s", jwk.getAlgorithm()));
+              String.format("Unsupported key type: %s", keyType));
     };
   }
 
   @SneakyThrows
   public JwkProvider loadJwkProvider(String issuer) {
-
+    LOGGER.debug("Loading JwkProvider for issuer '{}'", issuer);
     if (issuer.equals(INTERNAL)) {
       // Return our own "self-signed" provider, for easy mode.
       // TODO: This should be configurable
-      return new JwkProviderBuilder(Path.of("etc/conf/certs.json").toUri().toURL()).cached(false).build();
+      Path certsFile = securityContext.getCertsFile();
+      return new JwkProviderBuilder(certsFile.toUri().toURL()).cached(false).build();
     } else {
       // Get the JWKS from the OIDC well-known location described here
       // https://openid.net/specs/openid-connect-discovery-1_0-21.html#ProviderConfig
 
-      if (!issuer.startsWith("https://")) {
+      if (!issuer.startsWith("https://") && !issuer.startsWith("http://")) {
         issuer = "https://" + issuer;
       }
 
@@ -78,25 +92,29 @@ public class JwksOperations {
         wellKnownConfigUrl += "/";
       }
 
+      var path = wellKnownConfigUrl + ".well-known/openid-configuration";
+      LOGGER.debug("path: {}", path);
+
       String response = webClient
-              .get(wellKnownConfigUrl + ".well-known/openid-configuration")
-              .aggregate()
-              .join()
-              .contentUtf8();
+          .get(path)
+          .aggregate()
+          .join()
+          .contentUtf8();
 
       // TODO: We should cache this. No need to fetch it each time.
-      Map<String, Object> configMap = mapper.readValue(response, new TypeReference<>() {
-      });
+      Map<String, Object> configMap = mapper.readValue(response, new TypeReference<>() {});
 
       if (configMap == null || configMap.isEmpty()) {
-        throw new OAuthInvalidRequestException(ErrorCode.ABORTED, "Could not get issuer configuration");
+        throw new OAuthInvalidRequestException(ErrorCode.ABORTED,
+            "Could not get issuer configuration");
       }
 
       String configIssuer = (String) configMap.get("issuer");
       String configJwksUri = (String) configMap.get("jwks_uri");
 
       if (!configIssuer.equals(issuer)) {
-        throw new OAuthInvalidRequestException(ErrorCode.ABORTED, "Issuer doesn't match configuration");
+        throw new OAuthInvalidRequestException(ErrorCode.ABORTED,
+            "Issuer doesn't match configuration");
       }
 
       if (configJwksUri == null) {
@@ -104,7 +122,8 @@ public class JwksOperations {
       }
 
       // TODO: Or maybe just cache the provider for reuse.
-      return new JwkProviderBuilder(new URL(configJwksUri)).cached(false).build();
+      return new JwkProviderBuilder(URI.create(configJwksUri).toURL()).cached(false).build();
     }
   }
 }
+
